--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
- 
+  <link rel="stylesheet" href="style.css">
+
 </head>
  
 <body>
@@ -49,5 +50,7 @@
  
     </table>
   </form>
+
+  <script src="calculator.js"></script>
 </body>
 </html>
