--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- 上から4段目（0/C/=/+) -->
       <tr>
         <td><input type="button" value="0" onclick="get_calc(this)"></td>
-        <td><input type="button" value="C" onclick="get_calc(this)"></td>
+        <td><input type="button" value="C" class="clear" onclick="get_calc(this)"></td>
         <td><input type="button" value="=" class="equal" onclick="get_calc(this)"></td>
         <td><input type="button" value="+" class="operator" onclick="get_calc(this)"></td>
       </tr>
